testsuite/tests/rep-poly/UnliftedNewtypesLevityBinder.stderr

UnliftedNewtypesLevityBinder.hs:16:7: error:
    Cannot use function with representation-polymorphic arguments:
      IdentC :: a -> Ident a
    (Note that representation-polymorphic primops,
    such as 'coerce' and unboxed tuples, are eta-expanded
    internally because they must occur fully saturated.
    Use -fprint-typechecker-elaboration to display the full expression.)
    Representation-polymorphic arguments: a :: TYPE r
